@@ -5,9 +5,9 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<title>JavaScript Wars</title>
 	</head>
-	<body>
+	<body bgcolor = #000000>
 		<div align="center" id="gamewindow">
-			<canvas id="canvas" width="800" height="600">
+			<canvas bgcolor=#FFFFFF id="canvas" width="640" height="640">
 				Canvas not supported. :(
 			</canvas>
 			<script type="text/javascript">
